JAVAFX setup